mongo-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert -f stack.yml
    kompose.version: 1.22.0 (955b78124)
  creationTimestamp: null
  labels:
    io.kompose.service: mongo
  name: mongo
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: mongo
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert -f stack.yml
        kompose.version: 1.22.0 (955b78124)
      creationTimestamp: null
      labels:
        io.kompose.network/service1_net: "true"
        io.kompose.service: mongo
    spec:
      containers:
        - env:
            - name: MONGO_INITDB_ROOT_PASSWORD
              value: foodzup
            - name: MONGO_INITDB_ROOT_USERNAME
              value: foodzup
          image: mongo
          name: mongo
          resources: {}
          volumeMounts:
            - mountPath: /var/lib/mongodb
              name: foodzup2
      restartPolicy: Always
      volumes:
        - name: foodzup2
          persistentVolumeClaim:
            claimName: foodzup2
status: {}
