adminer-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.22.0 (955b78124)
  creationTimestamp: null
  labels:
    io.kompose.service: adminer
  name: adminer
spec:
  ports:
    - name: "8088"
      port: 8088
      targetPort: 8080
  selector:
    io.kompose.service: adminer
status:
  loadBalancer: {}
