phpmyadmin-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.22.0 (955b78124)
  creationTimestamp: null
  labels:
    io.kompose.service: phpmyadmin
  name: phpmyadmin
spec:
  ports:
    - name: "8087"
      port: 8087
      targetPort: 80
  selector:
    io.kompose.service: phpmyadmin
status:
  loadBalancer: {}
